tests/baselines/reference/parser645086_1.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/RegressionTests/parser645086_1.ts] ////

parser645086_1.ts(1,13): error TS1005: ',' expected.
parser645086_1.ts(1,14): error TS1134: Variable declaration expected.


==== parser645086_1.ts (2 errors) ====
    var v = /[]/]/
                ~
!!! error TS1005: ',' expected.
                 ~
!!! error TS1134: Variable declaration expected.